--- a/myApp/templates/myApp/detail.html
+++ b/myApp/templates/myApp/detail.html
@@ -13,7 +13,7 @@
     <td>{{ book.author }}</td>
     <td>{{ book.pub_house }}</td>
     <td>{{ book.pub_date }}</td>
-    <td><a href="{% url 'delBook' book.id} %">删除</a></td>
+    <td><a href="{% url 'delBook' book.id %}">删除</a></td>
   </tr>
   {% endfor %}
 </table>
